--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,4 +3,30 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+  .container{
+    width: 100%;
+    height: 100%;
+  }
+  #topo{
+    margin: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: aquamarine;
+  }
+  #topo li{
+    list-style-type: none;
+    display: inline;
+
+  }
+  #topo #butao{
+    width: 100px;
+    border-radius: 30px;
+  }
+
+  #seletor-id{
+    color: black;
+  }
+  .seletor-class{
+    color: black;
+  }
