--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,33 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+#seletor-id{
+  color: black;
+}
+
+.seletor-class{
+  color: black;
+}
+
+
+.sucesso{
+  color: #0a840a;
+  font-weight: 500;
+  font-size: 1.5rem;
+  background-color: #7be87b;
+  text-align: center;
+  border: 2px solid #0a840a;
+}
+
+.erro{
+  color: #ff0000;
+  font-weight: 500;
+  font-size: 1.5rem;
+  background-color: #fb9898;
+  text-align: center;
+  border: 2px solid #ff0000;
+}
