--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,44 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 #seletor-id{
   color: black;
 }
 
-#seletor-class{
+.seletor-class{
   color: black;
+}
+
+
+.sucesso{
+  color: #0a840a;
+  font-weight: 500;
+  font-size: 1.5rem;
+  background-color: #7be87b;
+  text-align: center;
+  border: 2px solid #0a840a;
+}
+
+.erro{
+  color: #ff0000;
+  font-weight: 500;
+  font-size: 1.5rem;
+  background-color: #fb9898;
+  text-align: center;
+  border: 2px solid #ff0000;
+}
+
+input[type=text]:valid{
+  border: 2px solid #7be87b;
+  outline: none;
+}
+
+input[type=text]:invalid{
+  border: 2px solid #eb0909;
+  outline: none;
 }
 
