--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #fff;
 }
 
 
@@ -82,5 +83,11 @@ input[type=text]:invalid{
 }
 
 .form-group button[type=submit]:hover{
-  box-shadow: inset 0 0 10px rgba(255,255,255, .8);
- }
+ box-shadow: inset 0 0 10px rgba(255,255,255, .8);
+}
+
+body{
+  background-image: url("../img/mountains-4743678_640.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
