--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
   }
   
-
+ 
   #seletor-id{
     color: black;
   }
@@ -12,7 +13,6 @@
   .seletor-class{
     color: black;
   }
-
 
   .sucesso{
     color: #0a840a;
@@ -32,7 +32,7 @@
     border: 2px solid #ff0000;
   }
 
-  input[type=text]:valid{
+  /* input[type=text]:valid{
     border: 2px solid #7be87b;
     outline: none;
   }
@@ -40,6 +40,53 @@
   input[type=text]:invalid{
     border: 2px solid #eb0909;
     outline: none;
+  } */
+
+
+  .form-group{
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 70vh;
+    margin: 0 auto;
   }
 
-  
+  .form-group > div{
+    margin: 3% auto; 
+  }
+
+  .form-group input[type=email],input[type=password],input[type=text]{
+    display: block;
+    width: 50vw;
+    height: 10vh;
+    border-radius: 5px;
+    padding-left: 10px;
+    border: none;
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+    outline-color: #e8ebe8;
+  }
+
+  .form-group button[type=submit]{
+    display: block;
+    width: 25vw;
+    height: 10vh;
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: #1b35b4;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+    outline-color: #e8ebe8;
+    border: 2px solid #fff;
+    transition: all .4s ease-in;
+  }
+
+  .form-group button[type=submit]:hover{
+   box-shadow: inset 0 0 10px rgba(255,255,255, .8);
+  }
+
+  body{
+    background-image: url("../img/back-login-640×423.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
