--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,11 +82,22 @@ input[type=text]:invalid{
 }
 
 .form-group button[type=submit]:hover{
-  box-shadow: inset 0 0 10px rgba(255,255,255, .8);
+ box-shadow: inset 0 0 10px rgba(255,255,255, .8);
 }
 
 body{
   background-image: url("../img/back-login-640x423.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+#btnClose{
+  display: block;
+  border-radius: 100%;
+  width: 3vw;
+}
+
+dialog::backdrop{
+  width: 100%;
+  background-color: rgba(0,0,0, .3);
 }
