--- a/css/estilo.css
+++ b/css/estilo.css
@@ -86,7 +86,7 @@ input[type=text]:invalid{
 }
 
 body{
-  background-image: url("../img/back-login-640×423.jpg");
+  background-image: url("../img/mountains-4743678_640.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
