--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,112 +1,112 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: #fff;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #000000;
+  }
+  
+ 
+  #seletor-id{
+    color: black;
+  }
+
+  .seletor-class{
+    color: black;
+  }
+
+  .sucesso{
+    color: #0a840a;
+    font-weight: 500;
+    font-size: 1.5rem;
+    background-color: #7be87b;
+    text-align: center;
+    border: 2px solid #0a840a;
+  }
+
+  .erro{
+    color: #ff0000;
+    font-weight: 500;
+    font-size: 1.5rem;
+    background-color: #fb9898;
+    text-align: center;
+    border: 2px solid #ff0000;
+  }
+
+  /* input[type=text]:valid{
+    border: 2px solid #7be87b;
+    outline: none;
+  }
+
+  input[type=text]:invalid{
+    border: 2px solid #eb0909;
+    outline: none;
+  } */
 
 
-#seletor-id{
-  color: black;
-}
+  .form-group{
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 70vh;
+    margin: 0 auto;
+  }
 
-.seletor-class{
-  color: black;
-}
+  .form-group > div{
+    margin: 3% auto; 
+  }
 
-.sucesso{
-  color: #0a840a;
-  font-weight: 500;
-  font-size: 1.5rem;
-  background-color: #7be87b;
-  text-align: center;
-  border: 2px solid #0a840a;
-}
+  .form-group input[type=email],input[type=password],input[type=text]{
+    display: block;
+    width: 50vw;
+    height: 10vh;
+    border-radius: 5px;
+    padding-left: 10px;
+    border: none;
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+    outline-color: #e8ebe8;
+  }
 
-.erro{
-  color: #ff0000;
-  font-weight: 500;
-  font-size: 1.5rem;
-  background-color: #fb9898;
-  text-align: center;
-  border: 2px solid #ff0000;
-}
+  .form-group button[type=submit]{
+    display: block;
+    width: 25vw;
+    height: 10vh;
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: #1b35b4;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+    outline-color: #e8ebe8;
+    border: 2px solid #fff;
+    transition: all .4s ease-in;
+  }
 
-/* input[type=text]:valid{
-  border: 2px solid #7be87b;
-  outline: none;
-}
+  .form-group button[type=submit]:hover{
+   box-shadow: inset 0 0 10px rgba(255,255,255, .8);
+  }
 
-input[type=text]:invalid{
-  border: 2px solid #eb0909;
-  outline: none;
-} */
+  body{
+    background-image: url("../img/mountains-4743678_640.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
+  #btnClose{
+    display: block;
+    border-radius: 100%;
+    width: 4.8vw;
+    height: 10vh;
+    text-align: center;
+    color: #1b35b4;
+    font-weight: bold;
+    font-size: larger;
+    float: right;
+  }
 
-.form-group{
-  display: flex;
-  flex-direction: column;
-  width: 50vw;
-  height: 70vh;
-  margin: 0 auto;
-}
+  dialog::backdrop{
+    background-color: rgba(0,0,0, .5) !important;
+  }
 
-.form-group > div{
-  margin: 3% auto; 
-}
-
-.form-group input[type=email],input[type=password],input[type=text]{
-  display: block;
-  width: 50vw;
-  height: 10vh;
-  border-radius: 5px;
-  padding-left: 10px;
-  border: none;
-  box-shadow: inset 0 0 10px rgba(0,0,0, .8);
-  outline-color: #e8ebe8;
-}
-
-.form-group button[type=submit]{
-  display: block;
-  width: 25vw;
-  height: 10vh;
-  border-radius: 5px;
-  padding-left: 10px;
-  background-color: #1b35b4;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: inset 0 0 10px rgba(0,0,0, .8);
-  outline-color: #e8ebe8;
-  border: 2px solid #fff;
-  transition: all .4s ease-in;
-}
-
-.form-group button[type=submit]:hover{
- box-shadow: inset 0 0 10px rgba(255,255,255, .8);
-}
-
-body{
-  background-image: url("../img/mountains-4743678_640.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#btnClose{
-  display: block;
-  border-radius: 100%;
-  width: 4.8vw;
-  height: 10vh;
-  text-align: center;
-  color: #1b35b4;
-  font-weight: bold;
-  font-size: larger;
-  float: right;
-}
-
-dialog::backdrop{
-  background-color: rgba(0,0,0, .5) !important;
-}
-
-dialog{
-  margin: 0 auto;
-}
+  dialog{
+    margin: 0 auto;
+  }
