--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #fff;
   }
   
  
@@ -116,4 +115,25 @@ form{
     border: none;
     border-radius: 5px;
 
+  }
+
+  #btnLogin,#btnLiga,#btnDesliga{
+    display: block;
+    width: 20vw;
+    height: 7vh;
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: #1b35b4;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+    outline-color: #e8ebe8;
+    border: 2px solid #fff;
+    transition: all .4s ease-in;
+    font-size: 2rem;
+  }
+
+  .botoes{
+    display: flex;
+    justify-content: space-around;
   }
