--- a/css/estilo.css
+++ b/css/estilo.css
@@ -109,6 +109,9 @@
 
   dialog{
     margin: 0 auto;
+    background-image: url("../img/mountains-4743678_640.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   body h2 {
